DNN 잘돌아가게 수정

--- a/Titanic/Titanic.ipynb
+++ b/Titanic/Titanic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 713,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -22,7 +22,9 @@
   {
    "cell_type": "code",
    "execution_count": 714,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# csv 파일을 읽어온다.\n",
@@ -3021,7 +3023,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -6380,7 +6384,9 @@
   {
    "cell_type": "code",
    "execution_count": 760,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train = train.drop(['AgeBand', 'Age*Class'],axis =1) "
@@ -6519,7 +6525,9 @@
   {
    "cell_type": "code",
    "execution_count": 773,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "test[\"Survived\"] = Y_pred\n",
