conflict fix. add DNN k-fold and upload code

--- a/Titanic/Titanic-tensorflow-DNN.ipynb
+++ b/Titanic/Titanic-tensorflow-DNN.ipynb
@@ -6492,7 +6492,7 @@
     "    return tf.constant(feature), tf.constant(targets)\n",
     "\n",
     "def DNN():\n",
-    "    feature_columns = [tf.contrib.layers.real_valued_column(\"\", dimension=4)]\n",
+    "    feature_columns = [tf.contrib.layers.real_valued_column(\"\", dimension=10)]\n",
     "\n",
     "  # Build 3 layer DNN with 10, 20, 10 units respectively.\n",
     "    classifier = tf.contrib.learn.DNNClassifier(feature_columns=feature_columns,\n",
@@ -6522,7 +6522,54 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# 테스트, 트레인 데이터를 2:8 비율로 나누어 테스트. 5번 돌린 후 정확도의 평균을 취한다.\n",
+    "# 대략 81~82퍼 근방이 나옴\n",
+    "\n",
+    "import tensorflow as tf\n",
+    "import numpy as np\n",
+    "        \n",
+    "def _titanic_data_input_fn(data):        \n",
+    "    targets = tf.contrib.learn.extract_pandas_data(data.iloc[:,[0]])\n",
+    "    feature = tf.contrib.learn.extract_pandas_data(data.drop(['Survived'], axis =1))\n",
+    "    return tf.constant(feature), tf.constant(targets)\n",
+    "\n",
+    "def DNN(trainData, testData):\n",
+    "    feature_columns = [tf.contrib.layers.real_valued_column(\"\", dimension=10)]\n",
+    "\n",
+    "  # Build 3 layer DNN with 10, 20, 10 units respectively.\n",
+    "    classifier = tf.contrib.learn.DNNClassifier(feature_columns=feature_columns,\n",
+    "                                              hidden_units=[64, 32],\n",
+    "                                              n_classes=2,\n",
+    "                                              optimizer=tf.train.AdamOptimizer(\n",
+    "                                                  learning_rate=0.1   \n",
+    "                                              ),\n",
+    "                                              dropout=0.1,\n",
+    "                                              model_dir=\"./dnn_model\")\n",
+    "    \n",
+    "    \n",
+    "    classifier.fit(input_fn=lambda: _titanic_data_input_fn(trainData), steps=2000)\n",
+    " \n",
+    "    accuracy_score = classifier.evaluate(input_fn=lambda: _titanic_data_input_fn(testData), steps=1)[\"accuracy\"]\n",
+    "    print('-----------------------정확도: {0:f}'.format(accuracy_score))\n",
+    "    accuracyList.append(accuracy_score)\n",
+    "    \n",
+    "        \n",
+    "shuffledTrain = train.sample(frac=1)\n",
+    "accuracyList = []\n",
+    "chunkSize = 178\n",
+    "\n",
+    "for i in range(5):    \n",
+    "    testData = shuffledTrain[i * chunkSize : chunkSize * (i + 1)]\n",
+    "    trainData = shuffledTrain.drop(testData.index)\n",
+    "    print(i, '번째 루프. testSize', len(testData), 'trainSize', len(trainData))\n",
+    "    DNN(trainData, testData)\n",
+    "        \n",
+    "accuracy = 0\n",
+    "for accuracyTarget in accuracyList:\n",
+    "    accuracy += accuracyTarget\n",
+    "print('----정확도 평균: {0:f}'.format(accuracy/5))\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -6531,7 +6578,48 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# 업로드 코드\n",
+    "\n",
+    "import tensorflow as tf\n",
+    "import numpy as np\n",
+    "        \n",
+    "def _titanic_data_input_fn(data):        \n",
+    "    targets = tf.contrib.learn.extract_pandas_data(data.iloc[:,[0]])\n",
+    "    feature = tf.contrib.learn.extract_pandas_data(data.drop(['Survived'], axis =1))\n",
+    "    return tf.constant(feature), tf.constant(targets)\n",
+    "\n",
+    "def _predct_data(data):\n",
+    "    feature = tf.contrib.learn.extract_pandas_data(data.drop(['PassengerId'], axis =1))\n",
+    "    return tf.constant(feature)\n",
+    "\n",
+    "def DNN(trainData, testData):\n",
+    "    feature_columns = [tf.contrib.layers.real_valued_column(\"\", dimension=10)]\n",
+    "\n",
+    "  # Build 3 layer DNN with 10, 20, 10 units respectively.\n",
+    "    classifier = tf.contrib.learn.DNNClassifier(feature_columns=feature_columns,\n",
+    "                                              hidden_units=[64, 32],\n",
+    "                                              n_classes=2,\n",
+    "                                              optimizer=tf.train.AdamOptimizer(\n",
+    "                                                  learning_rate=0.1   \n",
+    "                                              ),\n",
+    "                                              dropout=0.1,\n",
+    "                                              model_dir=\"./dnn_model\")\n",
+    "    \n",
+    "    \n",
+    "    classifier.fit(input_fn=lambda: _titanic_data_input_fn(trainData), steps=2000)\n",
+    "    result = list(classifier.predict_classes(input_fn=lambda: _predct_data(testData)))\n",
+    "\n",
+    "    print(result)\n",
+    "    \n",
+    "    return result\n",
+    "    \n",
+    "        \n",
+    "result = DNN(train, test)\n",
+    "\n",
+    "test[\"Survived\"] = result\n",
+    "test[[\"PassengerId\", \"Survived\"]].to_csv(\"./result.csv\")"
+   ]
   },
   {
    "cell_type": "code",
